--- a/dz2/Sahok.html
+++ b/dz2/Sahok.html
@@ -32,17 +32,15 @@
     <li><a href="Sahok.html">Сашок</a></li>
     <li><a href="volodya.html">Володя</a></li>
     <li><a href="masturbek.html">Мастурбек</a></li>
-
 </ul>
 
-    <div class="block">
-        <div class="box">
-            <img src="img/danil.png" alt="den">
-        </div>
-        <img src="img/danila.png" alt="den">
+
+<div class="block">
+    <div class="box">
+        <img src="img/санек.png" alt="саня">
     </div>
-
-
+    <img src="img/сашок.png" alt="саня">
+</div>
 
 
 
