--- a/dz2/masturbek.html
+++ b/dz2/masturbek.html
@@ -37,9 +37,9 @@
 
     <div class="block">
         <div class="box">
-            <img src="img/danil.png" alt="den">
+            <img src="img/Мастурбек.png" alt="den">
         </div>
-        <img src="img/danila.png" alt="den">
+        <img src="img/Мастурбек!.png" alt="den">
     </div>
 
 
