--- a/dz2/volodya.html
+++ b/dz2/volodya.html
@@ -37,9 +37,9 @@
 
     <div class="block">
         <div class="box">
-            <img src="img/danil.png" alt="den">
+            <img src="img/володя.png" alt="den">
         </div>
-        <img src="img/danila.png" alt="den">
+        <img src="img/володя1.png" alt="den">
     </div>
 
 
